[AccountApp] Delete Warning Points.